--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -21,7 +21,9 @@ jobs:
       - name: generate
         run: |
           . ~/.nix-profile/etc/profile.d/nix.sh
-          go run . -path ./ext.json
+          engine="$(env NIXPKGS_ALLOW_UNFREE=1 nix derivation show --impure github:nixos/nixpkgs/nixos-unstable#vscode | jq -r '.[] | .env.version')"
+          [ -n "$engine" ]
+          go run . -path ./ext.json -engine "$engine"
 
       - name: commit
         run: |
